--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -30,18 +30,97 @@
           </ul>
       </nav>
 
+      <div class="container mt-5 clearfix">
+        <button class="btn btn-primary" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <i class="fas fa-plus" aria-hidden="true"></i> Add Receipt
+        </button>
+        <div class="dropdown float-right">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Sort
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="#">Date</a>
+            <a class="dropdown-item" href="#">Amount</a>
+            <a class="dropdown-item" href="#">Progress</a>
+          </div>
+        </div>
+        <div class="dropdown float-right mr-3">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Filter
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="#">Paid</a>
+            <a class="dropdown-item" href="#">Unpaid</a>
+          </div>
+        </div>
+      </div>
+
       <div class="container mt-5">
           <div class="row">
-              <div class="col-3">
+              <div class="d-none d-md-block col-md-6 col-lg-4">
                   <div class="add-receipt">
                     <i class="fas fa-plus"></i>
                   </div>
               </div>
-              <div class="col-3">
+              <div class="col-xs-12 col-md-6 col-lg-4">
                   <div class="receipt-preview">
-
+                    <h3>Happy Hour<span class="receipt-date">2/19</span></h3>
+                    <hr/>
+                    <p class="receipt-total">$128.50</p>
+                    
+                    <table class="w-100">
+                      <tr>
+                        <td class="align-middle receipt-progress">
+                          <div class="progress">
+                            <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width:65%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                          </div>
+                        </td>
+                        <td class="align-middle receipt-icon text-danger text-right">
+                          <i class="fas fa-times-circle"></i>
+                        </td>
+                      </tr>
+                    </table>
                   </div>
               </div>
+              <div class="col-xs-12 col-md-6 col-lg-4">
+                <div class="receipt-preview">
+                  <h3>Brunch<span class="receipt-date">2/12</span></h3>
+                  <hr/>
+                  <p class="receipt-total">$58.76</p>
+                  <table class="w-100">
+                    <tr>
+                      <td class="align-middle receipt-progress">
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width:89%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                      </td>
+                      <td class="align-middle receipt-icon text-danger text-right">
+                        <i class="fas fa-times-circle"></i>
+                      </td>
+                    </tr>
+                  </table>
+                </div>
+            </div>
+            <div class="col-xs-12 col-md-6 col-lg-4">
+                <div class="receipt-preview paid">
+                  <h3>Ladies Night<span class="receipt-date">2/10</span></h3>
+                  <hr/>
+                  <p class="receipt-total">$212.32</p>
+
+                  <table class="w-100">
+                    <tr>
+                      <td class="align-middle receipt-progress">
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width:100%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                      </td>
+                      <td class="align-middle receipt-icon text-success text-right">
+                        <i class="fas fa-check-circle"></i>
+                      </td>
+                    </tr>
+                  </table>
+                </div>
+            </div>
           </div>
       </div>
 
