--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -31,7 +31,7 @@
       </nav>
 
       <div class="container mt-5 clearfix">
-        <button class="btn btn-primary" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <button class="btn text-white bg-orange" type="button" id="dropdownMenuButton" data-toggle="modal" data-target="#addReceiptModal">
           <i class="fas fa-plus" aria-hidden="true"></i> Add Receipt
         </button>
         <div class="dropdown float-right">
@@ -72,10 +72,10 @@
                       <tr>
                         <td class="align-middle receipt-progress">
                           <div class="progress">
-                            <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width:65%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar progress-bar-striped bg-orange" role="progressbar" style="width:65%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                           </div>
                         </td>
-                        <td class="align-middle receipt-icon text-danger text-right">
+                        <td class="align-middle receipt-icon text-right text-orange">
                           <i class="fas fa-times-circle"></i>
                         </td>
                       </tr>
@@ -91,10 +91,10 @@
                     <tr>
                       <td class="align-middle receipt-progress">
                         <div class="progress">
-                          <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width:89%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                          <div class="progress-bar progress-bar-striped bg-orange" role="progressbar" style="width:89%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                       </td>
-                      <td class="align-middle receipt-icon text-danger text-right">
+                      <td class="align-middle receipt-icon text-orange text-right">
                         <i class="fas fa-times-circle"></i>
                       </td>
                     </tr>
@@ -111,10 +111,10 @@
                     <tr>
                       <td class="align-middle receipt-progress">
                         <div class="progress">
-                          <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width:100%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                          <div class="progress-bar progress-bar-striped bg-teal" role="progressbar" style="width:100%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                       </td>
-                      <td class="align-middle receipt-icon text-success text-right">
+                      <td class="align-middle receipt-icon text-teal text-right">
                         <i class="fas fa-check-circle"></i>
                       </td>
                     </tr>
@@ -124,7 +124,30 @@
           </div>
       </div>
 
-      
+      <div class="modal" tabindex="-1" role="dialog" id="addReceiptModal">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Add a Receipt</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <form>
+                <div class="form-group my-2">
+                  <p>Upload a well-lighted photo of your receipt. Make sure the receipt is laying flat on a flat surface and your photo is as straight on as possible.</p>
+                  <input type="file" name="fileToUpload" id="receiptFile"/>
+                </div>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+              <a href="receipt.html"><button type="button" class="btn btn-primary">Upload File</button></a>
+            </div>
+          </div>
+        </div>
+      </div>
       
       <footer class="p-3 mt-5">
         &nbsp;:)
