--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,7 @@
       content="Web site created using create-react-app"
     />
     <script src="https://kit.fontawesome.com/d9b905f9e6.js" crossorigin="anonymous"></script>
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/> -->
     
     <link
       rel="stylesheet"
@@ -19,7 +20,7 @@
     />
     
     <link rel="stylesheet" href="/css/Custom.css"/>
-    <link rel="stylesheet" href="/css/Dashboard.css"/>
+    <!-- <link rel="stylesheet" href="/css/Dashboard.css"/> -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
