Adding basic OCR functionality

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,7 +19,7 @@
       crossorigin="anonymous"
     />
     
-    <link rel="stylesheet" href="/css/Custom.css"/>
+    <link rel="stylesheet" href="/assets/css/Custom.css"/>
     <!-- <link rel="stylesheet" href="/css/Dashboard.css"/> -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
