--- a/client/public/index.html
+++ b/client/public/index.html
@@ -38,7 +38,7 @@
     -->
     <title>Splitsy - Bill splitting made easy!</title>
   </head>
-  <body>
+  <body class="d-flex flex-column h-100">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
